# ChangeLog for app-crypt/etcd-ca
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*etcd-ca-0_p20150423 (15 Aug 2015)

  15 Aug 2015; Stefan Junker <mail@stefanjunker.de> +etcd-ca-0_p20150423.ebuild:
  app-crypt/etcd-ca: version bump to latest commit

*etcd-ca-0_p20140903 (16 Oct 2014)

  16 Oct 2014; Zac Medico <zmedico@gentoo.org> +etcd-ca-0_p20140903.ebuild,
  +metadata.xml:
  Add app-crypt/etcd-ca.