@@ -1,7 +1,3 @@
-DIST etcd-ca-0_p20150409.zip 86688 SHA256 071bb6acd00ad1759c1d98cacefd4d684305bbbc3aeba3f773977be1c00b8b49 SHA512 ed688f09b995af12c0a6c04511a5c47597451f3bdc0f678bdf00f7e5af17b5b2b3e5e824e027a0f36e7542858d3a6c39a3b1841b7b0f789832714661f9c5abc5 WHIRLPOOL 7b4abcb8d848b1e6522218f8f2fc9a02b55fc16e024978f4259e82e3202685619ee2b9f57b457997be457c4d04d57d5613842e9fa06030792c8fd9c64cd1a2aa
-DIST etcd-ca-0_p20150423.zip 95219 SHA256 f5f9f0eca4a21e438220c99fc24570086b7f8ba7732fe5168338f1e909d326b1 SHA512 3b033e44f37ce996793cc72ea68c22887ad36ba143f79b385c1dc2a1588603e0ac0c84856b4b2fbdab3aa149e0511230cfb7f9a4cca52db7c65dfd2e0509e834 WHIRLPOOL 8cf34e049fe1ce8f3727a20a7f6e36ef14532432dd4dacf8d29bb77d0621635b82ced38a3f25112baa617b4928d1d473d49b0acc56f48af6282202fb578b69a2
-EBUILD etcd-ca-0_p20150409.ebuild 1049 SHA256 004142a91f11af6ffe275ff0da738cbcc2a5550f096c438a6fef2e60f31c6852 SHA512 b939d0e7c538c70bb782f4869414543b2ffb60362e3a1a626420ab7440f5ef3833a38e8cf5d7dc60b7a9e3c6600294d54bf933bd1f2cdad64916c4c276f87d11 WHIRLPOOL bf3958cd250484acc858875d648e49ddc3a15f2a3f4d74d187096e74c84d87cc078570dfa9822a6e5d8e8f3badaa968a854f3f05bf119f1c1472ce71f7de66ae
-EBUILD etcd-ca-0_p20150423.ebuild 1049 SHA256 ca900d8db3f0990f3338b54204e300a6cdc2a0fc9dc65d3c88d07aa67f7101fe SHA512 b9cebc57e61251c06d3f37989ab27412c8c8954ee77c6426e37beb103dd1bf7390d8ecd7c0c5b652e004a6f6666e3c80af8afde1436c9ed09a930fd87e9d6ed0 WHIRLPOOL 08f25e51f9364048724360c392ccf914e306f1ab72f9fcc26ae853d460fb42429f489c8822909c3453f24f91d16f55a586559784897bf6a69ed384f5c7302df0
 EBUILD etcd-ca-9999.ebuild 775 SHA256 928f2725bb042c97a1c0d13b6426ccdc2c5ca08d5ab407919a29dc894a1f0b00 SHA512 89b30816e6baa1e531bc29f4b189ca428afd8f0d34f289afc049da4015a881b7c9676c8375a9b0d409ce7a40cb9dfa2756dc0e9dd0cdcf78751f0a8820af92c2 WHIRLPOOL 6b1d91388fdd37a920505d7ed95edbb86563634e9d577aef2b5cc6537966323a9e47238c7bcdd53bc9f2b8498d973bb2c2973b287c3a42d59aa3fb2dc89a8f6b
-MISC ChangeLog 531 SHA256 178a956dc536a4c1d124441439ccca01a15bca636367cee657390a5d6934aa82 SHA512 8a478acde77be31427502e104aa913f6fa099a8b5f8c42f9e458961133543de32b2617fd34ebd1398e1ffbe84fafa06e41c75de842b6cccb32ef6416c0508eb9 WHIRLPOOL f47617c9e6b07f3d36a2759b1a8aa2f77a8bc4e90568a35ce1b0d78f2c51cb7387dd3cf4f575d9fcd6b39ebb8165d3e57babd82357a68e1754d3c3867954cd74
+MISC ChangeLog 611 SHA256 cc653e1e3da42ae56012e3ac9c62219ab4a4128c3f3f9cd3462dfeda0f195285 SHA512 7b52872d9e51fb40363a5e35f0950c0a343cede6fd9f49e6a794b7c94deea5a44988d7251d9d14f597fb96df478d4398412c5f3872840273c203165b510f6500 WHIRLPOOL 269dfb55d0507dba329cf815432de697b211490f95020e915758efabd7213dfba41acc219ef5993f1a2eca6d3df80fec0686ccc87fb6a9598e7ede70d0fb6d0e
 MISC metadata.xml 446 SHA256 d5bd364e06809d8adb22323656ce5ddf8ea7ca5a637f32882b4b4e70f082c9ce SHA512 da3ca272b45bbad8bf740cb4a4efa472e9f322ab75d8c3ba72e1d594d18b462f301a1c38f0a2a73df31603d6373f037a45b69499b175b32ce95a2426bb891b84 WHIRLPOOL 6093540a3c777140ca540541c7e9d89ccadf8dbbd92d4ce9cd045647166fc69ea43a2a71d9720722c47c79c068f3fd625ead4b49647b69f40f6ce36e1a199b6a
